Fix content hidden on mobile phones
When there is too much content to display on a mobile phone, the content
begins to become hidden. Body needs to be set to overflow scroll to
display clipped content via scrollbar.

--- a/style.css
+++ b/style.css
@@ -4,7 +4,14 @@ body, html {
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
+    overflow: hidden;
     margin: 0;
+}
+
+body {
+    height: 100%;
+    overflow: scroll;
+    padding-bottom: 20px;
 }
 
 a:link {
